# k8s-predictscale

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
config/grafana/dashboards/: model-performance.json  predictions.json  scaling.json
config/helm/predictscale/: Chart.yaml  values.yaml
config/prometheus/: prometheus.yml  rules.yml
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
manifests/overlays/dev/: kustomization.yaml  patch-deployment.yaml
manifests/overlays/prod/: kustomization.yaml  patch-deployment.yaml
manifests/overlays/staging/: kustomization.yaml  patch-deployment.yaml
scripts/: generate_synthetic_data.py  load_test.py  train_model.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  health.py  model.py  (+2 more)
src/collector/: __init__.py  collector_service.py  metric_registry.py  prometheus_client.py
src/controller/: __init__.py  controller_service.py  decision_engine.py  k8s_scaler.py  safety_guard.py
src/predictor/: __init__.py  ensemble.py  lstm_model.py  model_manager.py  predictor_service.py  prophet_model.py
src/preprocessor/: __init__.py  cleaner.py  feature_engineer.py  normalizer.py  pipeline.py
src/utils/: __init__.py  alerts.py  config.py  logger.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_collector.py  test_controller.py  test_predictor.py  test_preprocessor.py
(+21 files in other folders)
